code refactoring
- для обработки аргументов функции main добавил библиотеку flag
- вынес валидацию данных, получаемых в хэндлерах в отдельные методы
- избавился от метода сортировки истории пользователя. Теперь сортировку выполняю непосредственно при SELECT (использовал библиотеку squrel)
- исправил бизнес-логику в некоторых местах
- добавил SELECT FOR UPDATE для получения баланса пользователей
