# docs/swagger.json
@@ -282,7 +282,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Transaction"
+                            "$ref": "#/definitions/models.Replenishment"
                         }
                     }
                 ],
@@ -372,6 +372,20 @@
                     "type": "integer"
                 },
                 "touserid": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Replenishment": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "userid": {
                     "type": "integer"
                 }
             }
